[package]
name = "boom_boyage"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rand = "0.8.5"
bevy = { version = "0.14.0", features = ["wayland"] }
serde = "1.0.204"
ron = "0.8.1"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[features]
default = [
    "dev_native",
]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
]
dev_native = [
    "dev",
    "bevy/file_watcher",
    "bevy/embedded_watcher",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "debuginfo"

[profile.release-native]
inherits = "release"
opt-level = 3
strip = "none"
